# graphrag

./: .coverage  DEVELOPMENT.md  INTEGRATION_SUMMARY.md  KNOWLEDGE_GRAPH_README.md  PYTEST_MIGRATION.md  README.md  databricks.yml  example_ministry_scraper.py  knowledge_graph_extractor.py  knowledge_graph_queries.py  knowledge_graph_visualizer.py  pdf_scraper_full.py  pyproject.toml  requirements-dev.txt  requirements-kg.txt  run_knowledge_graph_extraction.py  setup.py  streamlit_knowledge_graph_app.py  test_knowledge_graph.py
alberta_knowledge_graph.db/: catalog.kz  metadata.kz
alberta_pdf_catalog_20250617_224203/: entities_extracted.csv  ministries.csv  ministry_statistics.csv  pdf_documents_comprehensive.csv  pdf_documents_only.csv
alberta_pdf_catalog_20250617_224203/markdown_content/Advanced_Education/: advanced_education.md  all_services.md  budget_documents.md  child_care_subsidy.md  community_adult_learning_program.md  community_adult_learning_program_overview.md  community_adult_learning_program_policy_and_resources.md  contactcfm.md  data_publications_information_management.md  find_a_job.md  foster_and_kinship_care.md  get_help_elder_abuse.md  government_action.md  government_and_ministry_annual_reports.md  government_and_ministry_annual_reports_1.md  government_and_ministry_annual_reports_2.md  government_and_ministry_annual_reports_3.md  government_and_ministry_annual_reports_4.md  government_and_ministry_annual_reports_5.md  government_of_alberta.md  ministers_seniors_service_awards.md  news.md  open_government_program.md  post_secondary_program_standards_oversight.md  public_engagement.md  refocusing_health_care_in_alberta.md  releasecfm.md  releasecfm_1.md  releasecfm_2.md  vehicle_registration_renewal.md
alberta_pdf_catalog_20250617_224203/markdown_content/Affordability_and_Utilities/: accessibility.md  affordability_and_utilities.md  children_and_family_services.md  (+19 more)
knowledge_graph_output/: entities.csv  relationships.csv  triplets.csv
resources/: graphrag_job.yml
src/: main.py  notebook.ipynb
src/graphrag/: __init__.py  main.py
tests/: __init__.py  test_alberta_gov_scraper.py  test_integration.py
(+80 files in other folders)
